[tool.poetry]
name = "impexpr"
version = "0.0.5"
description = "A simple superset of Python with import expressions added in"
authors = ["Stanislav Zmiev <szmiev2000@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ovsyanka83/impexpr"
keywords = ["python", "import", "syntax"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
ideas = "^0.0.37"
black = "^22.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"

[tool.poetry.scripts]
impexpr = 'impexpr:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
